# InfiniTensor_v2.0

./: CMakeLists.txt  Makefile  README.md
include/core/: expr.h  graph_builder.h  op_type.h  tensor.h
include/operators/: Clip.h  Conv.h  ElementWise.h  Gemm.h  LayerNorm.h  LpNorm.h  RmsNorm.h  Softmax.h  Unary.h
include/utils/: utils.h
python/bindings/: graph.hpp  tensor.hpp
python/src/infinitensor/: torch_fx_translator.py
python/src/infinitensor/converter/: unified_converters.py
python/tests/: test_clip.py  test_conv.py  test_layernorm.py  test_lpnorm.py  test_rmsnorm.py  test_softmax.py  test_torch_fx_translator.py  test_unary.py
src/core/: expr.cc  graph_builder.cc  runtime.cc  tensor.cc
src/kernels/: Clip.cc  Conv.cc  ElemenWise.cc  LayerNorm.cc  LpNorm.cc  RmsNorm.cc  Softmax.cc  Unary.cc
src/operators/: Clip.cc  Conv.cc  ElementWise.cc  Gemm.cc  LayerNorm.cc  LpNorm.cc  RmsNorm.cc  Softmax.cc  Unary.cc
src/utils/: utils.cc
test/kernels/: test_clip_kernel.cc  test_conv_kernel.cc  test_elementwise_kernel.cc  test_layernorm_kernel.cc  test_lpnorm_kernel.cc  test_rmsnorm_kernel.cc  test_softmax_kernel.cc  test_unary_kernel.cc
test/operators/: test_clip_op.cc  test_conv_op.cc  test_elementwise_op.cc  test_layernorm_op.cc  test_lpnorm_op.cc  test_rmsnorm_op.cc  test_softmax_op.cc  test_unary_op.cc
