option(BUILD_TEST "Build tests" OFF)
option(USE_CUDA "Use CUDA" OFF)
option(USE_ASCEND "Use Ascend" OFF)
option(USE_CAMBRICON "Use Cambricon" OFF)
option(USE_METAX "Use Metax" OFF)
option(USE_MOORE "Use Moore" OFF)
option(USE_ILUVATAR "Use Iluvatar" OFF)
option(USE_HYGON "Use Sugon" OFF)
option(USE_KUNLUN "Use Kunlun" OFF)
cmake_minimum_required(VERSION 3.17)

if(USE_CUDA)
 add_compile_definitions(USE_CUDA=1)
endif()
if(USE_ASCEND)
 add_compile_definitions(USE_ASCEND=1)
endif()
if(USE_CAMBRICON)
 add_compile_definitions(USE_CAMBRICON=1)
endif()
if(USE_METAX)
 add_compile_definitions(USE_METAX=1)
endif()
if(USE_MOORE)
 add_compile_definitions(USE_MOORE=1)
endif()
if(USE_ILUVATAR)
 add_compile_definitions(USE_ILUVATAR=1)
endif()
if(USE_HYGON)
 add_compile_definitions(USE_HYGON=1)
endif()
if(USE_KUNLUN)
 add_compile_definitions(USE_KUNLUN=1)
endif()

include(CMakeDependentOption)
project(InfiniTensor C CXX)

set(DEFAULT_BUILD_TYPE "RelWithDebInfo")
# Build Type
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    message("Configuring for Debug build.")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0")
    add_compile_definitions(DEBUG_MODE)
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    message("Configuring for Release build.")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
    add_compile_definitions(NDEBUG)
elseif(CMAKE_BUILD_TYPE STREQUAL "RelWithDebInfo")
    message("Configuring for RelWithDebInfo build.")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2")
else()
    message("Build type not specified. Configuring for RelWithDebInfo build.")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O2")
endif()


set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF) # -std=gnu++11 when on, -std=c++11 when off
add_compile_options(-Wno-error=unused-variable)

if(((CMAKE_C_COMPILER_ID MATCHES "GNU") AND NOT MINGW AND NOT HAIKU) AND CMAKE_CXX_COMPILER_VERSION GREATER_EQUAL 13)
  message(STATUS "GCC13 or later detected, disabling \"-Warray-bounds and -Wstringop-overflow\" for all source files as it appears to be a false positive")
  add_compile_options(-Wno-array-bounds -Wno-stringop-overflow)
endif()

include_directories(include)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -Werror -Wno-error=deprecated-declarations -Wno-error=pointer-arith")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -UNDEBUG") # Enable assertion
set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} -UNDEBUG") # Enable assertion

# Source files
file(GLOB_RECURSE SRC src/core/*.cc src/kernels/*.cc src/operators/*.cc src/utils/*.cc)

# Libraries
add_library(InfiniTensor SHARED ${SRC})

# include infini_operators
if(DEFINED ENV{INFINI_ROOT})
  include_directories($ENV{INFINI_ROOT}/include)
  find_library(INFINOP_LIBRARY NAMES infiniop PATHS $ENV{INFINI_ROOT}/lib REQUIRED)
  find_library(INFINIRT_LIBRARY NAMES infinirt PATHS $ENV{INFINI_ROOT}/lib REQUIRED)
  target_link_libraries(InfiniTensor ${INFINOP_LIBRARY} ${INFINIRT_LIBRARY})
else()
  Message(FATAL_ERROR "INFINI_ROOT is not defined")
endif()

# Pybind11
add_subdirectory(3rd-party/pybind11)
include_directories(3rd-party/pybind11/include)

# Python bindings
file(GLOB_RECURSE BINGDINGS python/bindings/infinitensor.cc)
pybind11_add_module(pyinfinitensor MODULE ${BINGDINGS})
target_link_libraries(pyinfinitensor PRIVATE InfiniTensor)

# Test
if(BUILD_TEST)
set(BUILD_GMOCK
      OFF
      CACHE BOOL "Do not build gmock" FORCE)
  set(INSTALL_GTEST
      OFF
      CACHE BOOL "Do not install gtest" FORCE)
  add_subdirectory(3rd-party/googletest)
  include_directories(3rd-party/googletest/googletest/include)
endif()

function(build_test files)
  # Non-recursive glob for skip failed tests
  file(GLOB TEST_SOURCES ${files})
  foreach(testsourcefile ${TEST_SOURCES})
    get_filename_component(testname ${testsourcefile} NAME_WE)
    add_executable(${testname} ${testsourcefile})
    target_link_libraries(${testname} InfiniTensor GTest::gtest_main)
    add_test(NAME ${testname} COMMAND ${testname})
  endforeach(testsourcefile ${TEST_SOURCES})
endfunction()

if(BUILD_TEST)
  enable_testing()
  build_test(test/kernels/*.cc)
  build_test(test/core/*.cc)
  build_test(test/operators/*.cc)
endif()
